feat: optimize Missing Enchants feature and update version to 0.5.1